# course-firecrawl

./: .gitignore  01_synch_scraper.py  02_async_scraper.py  03_scrape_with_params.py  04_crawl.py  05_async_crawl.py  06_llmstext.py  07_map.py  08_extract.py  09_extract_async.py  10_search.py  11_fire_agent.py  README.md  crawl_result.json  summary.md
automated_crewai_flow/: README.md  pyproject.toml
automated_crewai_flow/src/automated_crewai_flow/: main.py
fastapi_scraper/: README.md  requirements.txt
fastapi_scraper/src/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  models.py
fastapi_scraper/src/routers/: health.py  scraping.py
fastapi_scraper/src/services/: firecrawl_service.py
firecrawl_flow/: README.md  pyproject.toml  search_results.md
firecrawl_flow/src/firecrawl_flow/: main.py  models.py
firecrawl_flow/src/firecrawl_flow/crews/summary_crew/: summary_crew.py
firecrawl_flow/src/firecrawl_flow/crews/summary_crew/config/: agents.yaml  tasks.yaml
firecrawl_flow/src/firecrawl_flow/utils/: __init__.py  file_operations.py
