[project]
name = "automated_crewai_flow"
version = "0.1.0"
description = "automated_crewai_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
]

[project.scripts]
kickoff = "automated_crewai_flow.main:kickoff"
run_crew = "automated_crewai_flow.main:kickoff"
plot = "automated_crewai_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
